2005-12-08  Lillian Angel  <langel@redhat.com>

	* javax/swing/text/StyledEditorKit.java
	(create): Reverted to use BoxView. I need to write
	a mauve test to be sure about this.

2005-12-08  Lillian Angel  <langel@redhat.com>

	* javax/swing/text/StyledEditorKit.java
	(create): Changed to use BlockView here instead of BoxView.

2005-12-08  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/JEditorPane.java:
	(init): Changed to no-argument instead of taking in an EditorKit and
	passing it to setEditorKit.  Callers will have to call setEditorKit
	themselves.
	(JEditorPane()): Changed call to init to have no arguments, call
	setEditorKit after init.
	(JEditorPane(String, String)): Likewise.
	(JEditorPane(URL)): Don't call default constructor, call init and then
	setEditorKit using the appropriate EditorKit for text/html.

2005-12-08  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/JEditorPane.java:
	(registerMap): New field.
	(editorMap): New field.
	(JEditorPane()): Call init instead of setEditorKit.
	(JEditorPane(String, String)): Likewise.
	(init): New method.
	(createEditorKitForContentType): Implemented and documented.
	(getEditorKitClassNameForContentType): Likewise.
	(getEditorKitForContentType): Likewise.
	(registerEditorKitForContentType): Likewise.
	(replaceSelection): Call super (this is temporary until the real
	implementation happens.  There is already a TODO noting that this needs
	to be implemented.
	(setEditorKitForContentType): Implemented and documented.

2005-12-08  Lillian Angel  <langel@redhat.com>

	* javax/swing/text/html/BlockView.java:
	New class added.
	(BlockView): Implemented.
	(setParent): Implemented.
	(calculateMajorAxisRequirements): Added, not fully implemented.
	(calculateMinorAxisRequirements): Likewise.
	(layoutMinorAxis): Likewise.
	(paint): Implemented, but some code is commented out since
	StyleSheet is not yet implemented.
	(getAttributes): Likewise.
	(getResizeWeight): Implemented.
	(getAlignment): Implemented.